--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -36,15 +36,20 @@ h1 {
 }
 
 a {
-  display: inline-block;
+  display: inline; /* Changed from inline-block */
   font-family: Arial, sans-serif;
-  padding: 10px;
+  padding: 0; /* Remove padding */
   text-align: center;
   color: #333;
   text-decoration: none;
   font-weight: bold;
   font-size: 18px;
   margin-bottom: 20px;
+}
+
+a:hover {
+  background-color: transparent; /* No color change on hover */
+  color: #333; /* Keep the same color on hover */
 }
 
 a.message-button {
@@ -54,11 +59,6 @@ a.message-button {
   box-shadow: 0 0 0 10px green;
   border-color: rgb(0, 0, 0);
   border-style: solid;
-}
-
-a:hover {
-  background-color: #333;
-  color: white;
 }
 
 /* Navigation bar styles */
@@ -170,7 +170,8 @@ a:hover {
   text-decoration: none;
   background-color: transparent;
   cursor: pointer;
-  font-size: 14px; /* adjust this value to your liking */
+  line-height: 1.5;
+  font-size: 12px; 
 }
 
 .renewal-link:hover {
