--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -11,58 +11,57 @@
 <body>
   <%- include('./partials/navbar') %>
   
-    <!-- Main content -->
-    <main>
-      <h1 class="welcome-message">frogPrince Dashboard</h1>
-      <div class="renewal-sections">
-        <!-- Ongoing Renewals -->
-        <div id="ongoing-renewals" class="renewal-box">
-          <h3>Ongoing Renewals</h3>
-          <table>
-            <tbody id="ongoing-renewals-body"></tbody>
-          </table>
-        </div>
-      
-        <!-- Upcoming Renewals -->
-        <div id="upcoming-renewals" class="renewal-box">
-          <h3>Upcoming Renewals</h3>
-          <table>
-            <tbody id="upcoming-renewals-body"></tbody>
-          </table>
-        </div>
-      
-        <!-- Finished Renewals -->
-        <div id="finished-renewals" class="renewal-box">
-          <h3>Finished Renewals</h3>
-          <table>
-            <tbody id="finished-renewals-body"></tbody>
-          </table>
-        </div>
+  <!-- Main content -->
+  <main>
+    <h1 class="welcome-message">frogPrince Dashboard</h1>
+    <div class="renewal-sections">
+      <!-- Ongoing Renewals -->
+      <div id="ongoing-renewals" class="renewal-box">
+        <h3>Ongoing Renewals</h3>
+        <table>
+          <tbody id="ongoing-renewals-body"></tbody>
+        </table>
       </div>
-      <section class="activity-section">
-        <h2>Recent activity</h2>
-        <div class="table-wrapper">
-          <table>
-            <thead>
-              <tr>
-                <th>Activity name</th>
-                <th>Details</th>
-                <th>Start date</th>
-                <th>Status</th>
-                <th>Link</th>
-              </tr>
-            </thead>
-            <tbody id="activity-table-body">
-            </tbody>
-          </table>
-        </div>
-      </section>
-    </main>
+    
+      <!-- Upcoming Renewals -->
+      <div id="upcoming-renewals" class="renewal-box">
+        <h3>Upcoming Renewals</h3>
+        <table>
+          <tbody id="upcoming-renewals-body"></tbody>
+        </table>
+      </div>
+    
+      <!-- Finished Renewals -->
+      <div id="finished-renewals" class="renewal-box">
+        <h3>Finished Renewals</h3>
+        <table>
+          <tbody id="finished-renewals-body"></tbody>
+        </table>
+      </div>
+    </div>
+    <section class="activity-section">
+      <h2>Recent activity</h2>
+      <div class="table-wrapper">
+        <table>
+          <thead>
+            <tr>
+              <th>Activity name</th>
+              <th>Details</th>
+              <th>Start date</th>
+              <th>Status</th>
+              <th>Link</th>
+            </tr>
+          </thead>
+          <tbody id="activity-table-body"></tbody>
+        </table>
+      </div>
+    </section>
+  </main>
 
-    <script>
-      var renewals = <%- JSON.stringify(renewals) %>;
-    </script>
-    <script src="/dashboard.js"></script>
+  <script>
+    var renewals = <%- JSON.stringify(renewals) %>;
+  </script>
+  <script src="/dashboard.js"></script>
 </body>
 
 </html>
